# sprint-marketing-bot

./: .env.example  .gitignore  README.md  pyproject.toml  start-fe.ssh  start.ssh  test.ssh
app/: models.py  rag_pipeline.py  server.py  settings.py
app/sprint_marketing_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/utils/: __init__.py  index_manifest.py  log_io.py  logger.py  paths.py
docs/: Sprint_Marketing_VectorDB_Pack.docx  ~$rint_Marketing_VectorDB_Pack.docx
public/: test-host.html  widget.js
scripts/: eval_golden.py  ingest.py
site/: index.html  widget.js
sprint-ui/: index.html  package-lock.json  package.json
sprint-ui/src/: App.tsx  index.css  main.tsx
sprint-ui/src/components/: ChatWidget.css  ChatWidget.tsx  Composer.tsx  MessageBubble.tsx  MessageList.tsx  TypingIndicator.tsx
sprint-ui/src/hooks/: useChat.ts
sprint-ui/src/lib/: api.ts  runtimeApi.ts
sprint-ui/src/pages/: Admin.tsx
sprint_marketing_bot.egg-info/: SOURCES.txt
tests/: golden.jsonl  test_chunking.py  test_logger.py  test_prompt.py
